fix scrollbar

--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -52,8 +52,3 @@ body {
 .color-primary {
   color: var(--el-color-primary);
 }
-
-::-webkit-scrollbar {
-  width: 4px;
-  height: 4px;
-}
